--- a/BGGImporterDialog.html
+++ b/BGGImporterDialog.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons1.css">
 <table style='font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif;'>
   <tr Title="BGG Username">
     <td>Username:</td>
