Updates to accomodate changes to the BoardGameGeek API
I have updated the code to accomodate changes to the BoardGameGeek API around authorisation for their API. You will now need to acquire an authorisation token to be able to use this script (details of how to do this can be found here: https://boardgamegeek.com/using_the_xml_api). I have also added in an option to import a users game collection.

--- a/BGGImporterDialog.html
+++ b/BGGImporterDialog.html
@@ -2,50 +2,58 @@
 <table style='font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif;'>
   <tr Title="BGG Username">
     <td>Username:</td>
-    <td><input type="text" name="username" id="username" value="<?= usernameVar ?>" width="169px" ></td>
+    <td><input type="text" name="username" id="username" value="<?= usernameVar ?>" width="169px" Title="BGG Username" ></td>
   </tr>
   <tr Title="First date to import plays from">
     <td>Start Date:</td>
-    <td><input type="date" name="minDate" id="minDate" value="<?= minDateVar ?>" style="width:169px" ></td>
+    <td><input type="date" name="minDate" id="minDate" value="<?= minDateVar ?>" style="width:169px" Title="First date to import plays from"></td>
   </tr>
   <tr Title="Last date to import plays from">
     <td>End Date:</td>
-    <td><input type="date" name="maxDate" id="maxDate" value="<?= maxDateVar ?>" style="width:169px" ></td>
+    <td><input type="date" name="maxDate" id="maxDate" value="<?= maxDateVar ?>" style="width:169px" Title="Last date to import plays from"></td>
+  </tr>
+  <tr Title="Include a column to show playtime">
+    <td>Include Playtime:</td>
+    <td><input type="checkbox" name="incPlaytime" id="incPlaytime" value="1"  Title="Include a column to show playtime" <?= incPlaytimeVar ?> ></td>
   </tr>
   <tr Title="Include a column to show the year the game was published">
     <td>Include Game Year:</td>
-    <td><input type="checkbox" name="incGameYear" id="incGameYear" value="1" <?= incGameYearVar ?> ></td>
+    <td><input type="checkbox" name="incGameYear" id="incGameYear" value="1"  Title="Include a column to show the year the game was published" <?= incGameYearVar ?> ></td>
   </tr>
   <tr Title="Include a column to show the games current BGG rank">
     <td>Include Game Rank:</td>
-    <td><input type="checkbox" name="incGameRank" id="incGameRank" value="1" <?= incGameRankVar ?> ></td>
+    <td><input type="checkbox" name="incGameRank" id="incGameRank" value="1" Title="Include a column to show the games current BGG rank" <?= incGameRankVar ?> ></td>
   </tr>
-  <tr  Title="Include a column to show whether the game is in the users BGG collection">
+  <tr Title="Include a column to show whether the game is in the users BGG collection">
     <td>Include In Collection:</td>
-    <td><input type="checkbox" name="incInCollection" id="incInCollection" value="1" <?= incInCollectionVar ?> ></td>
+    <td><input type="checkbox" name="incInCollection" id="incInCollection" value="1" Title="Include a column to show whether the game is in the users BGG collection" <?= incInCollectionVar ?> ></td>
   </tr>
-  <tr  Title="Include a column to show whether the game is new to the current player based on the 'New' field against the player">
+  <tr Title="Include a column to show whether the game is new to the selected user based on the 'New' field against the player">
     <td>Include Whether New Game:</td>
-    <td><input type="checkbox" name="incNewGame" id="incNewGame" value="1" <?= incNewGameVar ?> ></td>
+    <td><input type="checkbox" name="incNewGame" id="incNewGame" value="1" Title="Include a column to show whether the game is new to the selected user based on the 'New' field against the player" <?= incNewGameVar ?> ></td>
   </tr>
-  <tr Title="Include columns to list the players in the game - including the number of players">
+  <tr Title="Include columns to list the players in the game - including the number of players (up to 8 players)">
     <td>Include Players:</td>
-    <td><input type="checkbox" name="incPlayers" id="incPlayers" value="1" <?= incPlayersVar ?> ></td>
+    <td><input type="checkbox" name="incPlayers" id="incPlayers" value="1" Title="Include columns to list the players in the game - including the number of players (up to 8 players)" <?= incPlayersVar ?> ></td>
   </tr>
   <tr Title="Include columns to list the player scores and ratings in the game">
     <td>Include Player Scores And Ratings:</td>
-    <td><input type="checkbox" name="incPlayerScoresAndRatings" id="incPlayerScoresAndRatings" value="1" <?= incPlayerScoresAndRatingsVar ?> ></td>
+    <td><input type="checkbox" name="incPlayerScoresAndRatings" id="incPlayerScoresAndRatings" value="1" Title="Include columns to list the player scores and ratings in the game" <?= incPlayerScoresAndRatingsVar ?> ></td>
   </tr>
   <tr Title="Include a column to show any comments written against the play">
     <td>Include Comments:</td>
-    <td><input type="checkbox" name="incComments" id="incComments" value="1" <?= incCommentsVar ?> ></td>
+    <td><input type="checkbox" name="incComments" id="incComments" value="1" Title="Include a column to show any comments written against the play" <?= incCommentsVar ?> ></td>
   </tr>
 </table>
 
-<input type="button" value="Import" onclick="ImportPlays()" />
+<input type="button" id="submitButton" value="Import" onclick="ImportPlays()" />
+<br/>
+<a><img src="https://drive.google.com/thumbnail?id=1unpb690BONNJB5HXtJEHfO4Raz7I-5JO" onClick="window.open('https://www.boardgamegeek.com', '_blank')" alt="Powered By BGG"></a>
 
 <script>
   function ImportPlays(){
+    document.getElementById('submitButton').disabled=true;
+
     var username = document.getElementById("username").value;
     var minDate = document.getElementById("minDate").value;
     var maxDate = document.getElementById("maxDate").value;
@@ -53,11 +61,14 @@
     var includeGameRank = document.getElementById("incGameRank").checked;
     var includeInCollection = document.getElementById("incInCollection").checked;
     var includeNewGame = document.getElementById("incNewGame").checked;
+    var includePlaytime = document.getElementById("incPlaytime").checked;
     var includePlayers = document.getElementById("incPlayers").checked;
     var includePlayerScoresAndRatings = document.getElementById("incPlayerScoresAndRatings").checked;
     var includeComments = document.getElementById("incComments").checked;
   
-    google.script.run.ImportBGGPlays(username, minDate, maxDate, includeGameYear, includeGameRank, includeInCollection, includeNewGame, includePlayers, includePlayerScoresAndRatings, includeComments); 
-    google.script.host.close();
+    google.script.run.ImportBGGPlays(username, minDate, maxDate, includePlaytime, includeGameYear, includeGameRank, includeInCollection, includeNewGame, includePlayers, includePlayerScoresAndRatings, includeComments); 
+        
+    // This has been commented out because auto-closing the dialog was occasionally stopping the script from running
+    //google.script.host.close();
   }
 </script>
